tests/rosetta/out/C/cheryls-birthday.c
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
typedef struct Birthday Birthday;

typedef struct {
  int month;
  int day;
  int month;
  int day;
} birthday_t;

typedef struct Birthday {
  int month;
  int day;
} Birthday;
typedef struct {
  int len;
  birthday_t *data;
} birthday_list_t;
birthday_list_t create_birthday_list(int len) {
  birthday_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(birthday_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

int monthUnique(Birthday *b, int list) {
  int c = 0;
  for (int tmp1 = 0; tmp1 < list.len; tmp1++) {
    birthday_t x = list.data[tmp1];
    if (x.month == b->month) {
      c = c + 1;
    }
  }
  return c == 1;
}

int dayUnique(Birthday *b, int list) {
  int c = 0;
  for (int tmp2 = 0; tmp2 < list.len; tmp2++) {
    birthday_t x = list.data[tmp2];
    if (x.day == b->day) {
      c = c + 1;
    }
  }
  return c == 1;
}

int monthWithUniqueDay(Birthday *b, int list) {
  for (int tmp3 = 0; tmp3 < list.len; tmp3++) {
    birthday_t x = list.data[tmp3];
    if (x.month == b->month && dayUnique(&x, list)) {
      return 1;
    }
  }
  return 0;
}

const char *bstr(Birthday *b) {
  list_string months = list_string_create(13);
  months.data[0] = "";
  months.data[1] = "January";
  months.data[2] = "February";
  months.data[3] = "March";
  months.data[4] = "April";
  months.data[5] = "May";
  months.data[6] = "June";
  months.data[7] = "July";
  months.data[8] = "August";
  months.data[9] = "September";
  months.data[10] = "October";
  months.data[11] = "November";
  months.data[12] = "December";
  int months = months;
  char *tmp4 = concat_string(months.data[b->month], " ");
  char *tmp5 = _str(b->day);
  char *tmp6 = concat_string(tmp4, tmp5);
  return tmp6;
}

int main() {
  birthday_t choices[] = {
      (Birthday){.month = 5, .day = 15}, (Birthday){.month = 5, .day = 16},
      (Birthday){.month = 5, .day = 19}, (Birthday){.month = 6, .day = 17},
      (Birthday){.month = 6, .day = 18}, (Birthday){.month = 7, .day = 14},
      (Birthday){.month = 7, .day = 16}, (Birthday){.month = 8, .day = 14},
      (Birthday){.month = 8, .day = 15}, (Birthday){.month = 8, .day = 17}};
  int choices_len = sizeof(choices) / sizeof(choices[0]);
  list_int tmp7 = list_int_create(0);
  birthday_list_t filtered = tmp7;
  for (int tmp8 = 0; tmp8 < choices_len; tmp8++) {
    birthday_t bd = choices[tmp8];
    if ((!monthUnique(&bd, choices))) {
      filtered = 0;
    }
  }
  list_int tmp9 = list_int_create(0);
  birthday_list_t filtered2 = tmp9;
  for (int tmp10 = 0; tmp10 < filtered.len; tmp10++) {
    birthday_t bd = filtered.data[tmp10];
    if ((!monthWithUniqueDay(&bd, filtered))) {
      filtered2 = 0;
    }
  }
  list_int tmp11 = list_int_create(0);
  birthday_list_t filtered3 = tmp11;
  for (int tmp12 = 0; tmp12 < filtered2.len; tmp12++) {
    birthday_t bd = filtered2.data[tmp12];
    if (dayUnique(&bd, filtered2)) {
      filtered3 = 0;
    }
  }
  list_int tmp13 = list_int_create(0);
  birthday_list_t filtered4 = tmp13;
  for (int tmp14 = 0; tmp14 < filtered3.len; tmp14++) {
    birthday_t bd = filtered3.data[tmp14];
    if (monthUnique(&bd, filtered3)) {
      filtered4 = 0;
    }
  }
  if (filtered4.len == 1) {
    printf("%s\n", "Cheryl's birthday is " + bstr(&filtered4.data[0]));
  } else {
    printf("Something went wrong!\n");
  }
  return 0;
}
